[package]
name = "pw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-trait = "0.1.77"
clap = { version = "4.5.2", features = ["derive"] }
futures = "0.3.30"
reqwest = { version = "0.11.25", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha1 = "0.10.6"
tokio = { version = "1.36.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.10.1"
